# cyclonedds-rust

./: ._ROADMAP_v5.md  .gitignore  .gitmodules  .trivyignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  FASE1_EXEC.md  FASE2_EXEC.md  FASE3_EXEC.md  LICENSE-MIT  README.md  ROADMAP_v1.md  ROADMAP_v10.md  ROADMAP_v11.md  ROADMAP_v2.md  ROADMAP_v3.md  ROADMAP_v4.md  ROADMAP_v5.md  ROADMAP_v6.md  ROADMAP_v7.md  ROADMAP_v8.md  ROADMAP_v9.md  SECURITY.md  SESSION_LOG_v1.8.0.md  docker-compose.yml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  clippy.yml  codeql.yml  coverage.yml  doc.yml  msrv.yml  release.yml
.omc/state/: agent-replay-8d79d4b6-cd32-41ef-97f7-c25c6cb46aad.jsonl
.omx/plans/: backlog-cyclonedds-rust-100pct.md  ffi-gap-matrix-cyclonedds-sys.md  prd-cyclonedds-rust-100pct.md  prd-cyclonedds-rust-hardening.md  remaining-100pct-checklist.md  remaining-100pct-phased-plan.md  test-spec-cyclonedds-rust-100pct.md  test-spec-cyclonedds-rust-hardening.md
.sisyphus/plans/: FULL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md
cargo-cyclonedds/: Cargo.toml
cargo-cyclonedds/src/: main.rs
cyclonedds/: Cargo.toml
cyclonedds-bench/: Cargo.toml
cyclonedds-bench/benches/: cdr.rs  config_comparison.rs  ipc_comparison.rs  latency.rs  throughput.rs
cyclonedds-build/: Cargo.toml
cyclonedds-build/src/: codegen.rs  idl_parser.rs  lib.rs
cyclonedds-cli/: Cargo.toml
cyclonedds-cli/src/: main.rs
cyclonedds-derive/: Cargo.toml
cyclonedds-derive/src/: lib.rs
cyclonedds-idlc/: Cargo.toml
cyclonedds-idlc/src/: main.rs
cyclonedds-rust-sys/: Cargo.toml  build.rs
cyclonedds-rust-sys/src/: lib.rs
cyclonedds-src/: Cargo.toml
cyclonedds-src/src/: lib.rs
cyclonedds-src/src/cyclonedds/docs/manual/: doxygen.conf.in
cyclonedds-src/src/cyclonedds/docs/manual/config/: index.rst
cyclonedds-sys/: Cargo.toml  build.rs  wrapper.h
cyclonedds-sys/src/: lib.rs  prebuilt_bindings.rs
cyclonedds-test-suite/: Cargo.toml
cyclonedds-test-suite/examples/: bench_latency.rs  interop_pub.rs  interop_sub.rs
cyclonedds-test-suite/src/: lib.rs  main.rs
cyclonedds-test-suite/tests/: advanced.rs  async_cancellation.rs  basic.rs  dynamic_type_builder.rs  entity_status.rs  error_recovery.rs  instances.rs  interop.rs  listeners.rs  loaned_reads.rs  qos.rs  qos_provider.rs  reconnect_cross_domain.rs  security.rs  statistics.rs  status.rs  stress.rs  write_loan.rs  write_loan_async.rs  xtypes_assignability.rs
cyclonedds-wasm/: Cargo.toml
cyclonedds-wasm/src/: lib.rs
cyclonedds/examples/: metrics.rs  no_std_types.rs  pub.rs  pub_keyed.rs  pub_qos.rs  request_reply_calc.rs  ros2_turtlesim.rs  shm_pub.rs  shm_sub.rs  sub.rs  sub_async.rs  sub_qos.rs
cyclonedds/src/: async.rs  builtin.rs  content_filtered_topic.rs  dynamic_type.rs  dynamic_value.rs  entity.rs  error.rs  lib.rs  listener.rs  log.rs  no_std_types.rs  observability.rs  participant.rs  participant_pool.rs  publisher.rs  qos.rs  qos_provider.rs  reader.rs  request_reply.rs  sample.rs  security.rs  sequence.rs  serde_sample.rs  serialization.rs  statistics.rs  status.rs  string.rs  subscriber.rs  topic.rs  type_discovery.rs  waitset.rs  write_arena.rs  writer.rs  xtypes.rs
cyclonedds/tests/: integration_test.rs
dds-demo-test/: Cargo.toml
dds-demo-test/src/: comprehensive_test.rs  publisher.rs  subscriber.rs
docs/: api-guide.md  architecture.md  async-patterns.md  benchmarks.md  faq.md  fuzzing.md  getting-started.md  migration-from-python.md  observability.md  qos-reference.md  ros2-integration.md  security-guide.md  security-production.md  tutorial.md  type-system.md
examples/: qos_profiles.xml  security_pub.rs  security_sub.rs
examples/security/: governance.xml  permissions.xml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cdr_deserialize.rs
openspec/changes/cyclonedds-rust-mvp/: proposal.md  tasks.md
scripts/: bench_compare.sh  generate-certs.sh  publish.sh  regenerate-bindings.sh
tools/: audit_ffi_coverage.py
