[workspace]
members = [
    "cyclonedds-src",
    "cyclonedds-rust-sys",
    "cyclonedds",
    "cyclonedds-derive",
    "cyclonedds-test-suite",
    "cyclonedds-build",
    "cyclonedds-idlc",
    "cyclonedds-cli",
    "dds-demo-test",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.85"
authors = ["Matheus Zeitune <matheus.zeitune.developer@gmail.com>"]
license = "MIT"
repository = "https://github.com/mzet97/cyclonedds-rust"
homepage = "https://github.com/mzet97/cyclonedds-rust"
documentation = "https://docs.rs/cyclonedds"
readme = "README.md"

[workspace.dependencies]
cyclonedds-src = { path = "cyclonedds-src", version = "1.0.1" }
cyclonedds-rust-sys = { path = "cyclonedds-rust-sys", version = "1.0.1" }
cyclonedds = { path = "cyclonedds", version = "1.0.0" }
cyclonedds-derive = { path = "cyclonedds-derive", version = "1.0.0" }
cyclonedds-build = { path = "cyclonedds-build", version = "1.0.0" }
