[workspace]
members = [
    "cyclonedds-src",
    "cyclonedds-rust-sys",
    "cyclonedds",
    "cyclonedds-derive",
    "cyclonedds-test-suite",
    "cyclonedds-build",
    "cyclonedds-idlc",
    "cyclonedds-cli",
    "dds-demo-test",
    "cyclonedds-bench",
    "cargo-cyclonedds",
    "cyclonedds-wasm",
]
resolver = "2"

[workspace.package]
version = "2.0.1"
edition = "2021"
rust-version = "1.85"
authors = ["Matheus Zeitune <matheus.zeitune.developer@gmail.com>"]
license = "MIT"
repository = "https://github.com/mzet97/cyclonedds-rust"
homepage = "https://github.com/mzet97/cyclonedds-rust"
documentation = "https://docs.rs/cyclonedds"
readme = "README.md"

[workspace.dependencies]
cyclonedds-src = { path = "cyclonedds-src", version = "1.0.1" }
cyclonedds-rust-sys = { path = "cyclonedds-rust-sys", version = "1.1.0" }
cyclonedds = { path = "cyclonedds", version = "2.0.0" }
cyclonedds-derive = { path = "cyclonedds-derive", version = "2.0.0" }
cyclonedds-build = { path = "cyclonedds-build", version = "2.0.0" }
criterion = "0.5"
