[package]
name = "cargo-cyclonedds"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cargo plugin for generating Rust types from OMG IDL files for CycloneDDS"
keywords = ["dds", "cyclonedds", "idl", "cargo-plugin"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "cargo-cyclonedds"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
cyclonedds-build = { path = "../cyclonedds-build", version = "1.0.0" }
