[package]
name = "cyclonedds-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line tools for CycloneDDS"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["dds", "cyclonedds", "cli", "tools"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "cyclonedds-cli"
path = "src/main.rs"

[dependencies]
cyclonedds = { path = "../cyclonedds", version = "0.1.0" }
cyclonedds-rust-sys = { path = "../cyclonedds-rust-sys", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
