[package]
name = "cyclonedds-cli"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line tools for CycloneDDS"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["dds", "cyclonedds", "cli", "tools"]
categories = ["network-programming", "command-line-utilities"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "cyclonedds-cli"
path = "src/main.rs"

[dependencies]
cyclonedds = { workspace = true }
cyclonedds-rust-sys = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
