[package]
name = "cyclonedds-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc-macro derive for cyclonedds-rust DdsType trait"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
