[package]
name = "cyclonedds-idlc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for compiling IDL files to Rust source code for CycloneDDS"

[[bin]]
name = "cyclonedds-idlc"
path = "src/main.rs"

[dependencies]
cyclonedds-build = { path = "../cyclonedds-build" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
