[package]
name = "cyclonedds-idlc"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for compiling IDL files to Rust source code for CycloneDDS"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["dds", "cyclonedds", "idl", "compiler"]
categories = ["network-programming", "command-line-utilities"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "cyclonedds-idlc"
path = "src/main.rs"

[dependencies]
cyclonedds-build = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
