[package]
name = "cyclonedds-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FFI bindings for CycloneDDS"

[dependencies]

[build-dependencies]
bindgen = "0.71"

[features]
default = []

[lib]
name = "cyclonedds_sys"
crate-type = ["lib"]
doctest = false
