[package]
name = "cyclonedds-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["Matheus Zeitune <matheus.zeitune.developer@gmail.com>"]
license = "MIT"
repository = "https://github.com/mzet97/cyclonedds-rust"
description = "Experimental DDS bindings for WebAssembly using WebSocket transport"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Blob",
    "Window",
] }

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
