[package]
name = "cyclonedds"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Safe Rust wrapper for CycloneDDS"

[dependencies]
cyclonedds-sys = { workspace = true }
cyclonedds-derive = { workspace = true }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
async-stream = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["async"]
async = ["tokio", "async-stream", "futures-core", "futures-util"]

[dev-dependencies]
cyclonedds-derive = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "time", "rt-multi-thread", "macros"] }
futures-util = "0.3"
