[package]
name = "cyclonedds"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Safe Rust wrapper for Eclipse CycloneDDS"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["dds", "cyclonedds", "middleware", "pub-sub", "distributed"]
categories = ["network-programming", "api-bindings"]

[dependencies]
cyclonedds-rust-sys = { workspace = true }
cyclonedds-derive = { workspace = true }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
async-stream = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["async"]
async = ["tokio", "async-stream", "futures-core", "futures-util"]

[dev-dependencies]
cyclonedds-derive = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "time", "rt-multi-thread", "macros"] }
futures-util = "0.3"
