[package]
name = "cyclonedds"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Safe Rust wrapper for Eclipse CycloneDDS"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["dds", "cyclonedds", "middleware", "pub-sub", "distributed"]
categories = ["network-programming", "api-bindings"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
cyclonedds-rust-sys = { workspace = true }
cyclonedds-derive = { workspace = true }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
async-stream = { version = "0.3", optional = true }
futures-core = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
postcard = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"], optional = true }
console-subscriber = { version = "0.4", optional = true }

[features]
default = ["async"]
async = ["tokio", "async-stream", "futures-core", "futures-util"]
security = ["cyclonedds-rust-sys/security"]
tracing = ["dep:tracing"]
serde = ["dep:postcard", "dep:serde"]
opentelemetry = ["dep:tracing-subscriber", "tracing"]
tokio-console = ["dep:console-subscriber"]

[dev-dependencies]
cyclonedds-derive = { workspace = true }
tokio = { version = "1", features = ["rt", "sync", "time", "rt-multi-thread", "macros"] }
futures-util = "0.3"
