[package]
name = "dds-demo-test"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "comprehensive_test"
path = "src/comprehensive_test.rs"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[dependencies]
cyclonedds = { workspace = true }
cyclonedds-derive = { workspace = true }
